# perosnal_evaluator_backend

./: .env  pyproject.toml  requirements.txt
src/app/: main.py
src/models/: schema.py
